--- a/index.html
+++ b/index.html
@@ -9994,12 +9994,153 @@ var make = function make(elm) {
         return node;
     };
 
+    function initGraphics(main)
+        {
+
+            var signalGraph = main;
+
+            // make sure the signal graph is actually a signal & extract the visual model
+            if (!('notify' in signalGraph))
+            {
+                signalGraph = Elm.Signal.make(elm).constant(signalGraph);
+            }
+            var initialScene = signalGraph.value;
+
+            // Figure out what the render functions should be
+            var render;
+            var update;
+            if (initialScene.ctor === 'Element_elm_builtin')
+            {
+                var Element = Elm.Native.Graphics.Element.make(elm);
+                render = Element.render;
+                update = Element.updateAndReplace;
+            }
+            else
+            {
+                var VirtualDom = Elm.Native.VirtualDom.make(elm);
+                render = VirtualDom.render;
+                update = VirtualDom.updateAndReplace;
+            }
+
+            // Add the initialScene to the DOM
+            var container = elm.node;
+            var node = render(initialScene);
+            while (container.firstChild)
+            {
+                container.removeChild(container.firstChild);
+            }
+            container.appendChild(node);
+
+            var _requestAnimationFrame =
+                typeof requestAnimationFrame !== 'undefined'
+                    ? requestAnimationFrame
+                    : function(cb) { setTimeout(cb, 1000 / 60); }
+                    ;
+
+            // domUpdate is called whenever the main Signal changes.
+            //
+            // domUpdate and drawCallback implement a small state machine in order
+            // to schedule only 1 draw per animation frame. This enforces that
+            // once draw has been called, it will not be called again until the
+            // next frame.
+            //
+            // drawCallback is scheduled whenever
+            // 1. The state transitions from PENDING_REQUEST to EXTRA_REQUEST, or
+            // 2. The state transitions from NO_REQUEST to PENDING_REQUEST
+            //
+            // Invariants:
+            // 1. In the NO_REQUEST state, there is never a scheduled drawCallback.
+            // 2. In the PENDING_REQUEST and EXTRA_REQUEST states, there is always exactly 1
+            //    scheduled drawCallback.
+            var NO_REQUEST = 0;
+            var PENDING_REQUEST = 1;
+            var EXTRA_REQUEST = 2;
+            var state = NO_REQUEST;
+            var savedScene = initialScene;
+            var scheduledScene = initialScene;
+
+            function domUpdate(newScene)
+            {
+                scheduledScene = newScene;
+
+                switch (state)
+                {
+                    case NO_REQUEST:
+                        _requestAnimationFrame(drawCallback);
+                        state = PENDING_REQUEST;
+                        return;
+                    case PENDING_REQUEST:
+                        state = PENDING_REQUEST;
+                        return;
+                    case EXTRA_REQUEST:
+                        state = PENDING_REQUEST;
+                        return;
+                }
+            }
+
+            function drawCallback()
+            {
+                switch (state)
+                {
+                    case NO_REQUEST:
+                        // This state should not be possible. How can there be no
+                        // request, yet somehow we are actively fulfilling a
+                        // request?
+                        throw new Error(
+                            'Unexpected draw callback.\n' +
+                            'Please report this to <https://github.com/elm-lang/core/issues>.'
+                        );
+
+                    case PENDING_REQUEST:
+                        // At this point, we do not *know* that another frame is
+                        // needed, but we make an extra request to rAF just in
+                        // case. It's possible to drop a frame if rAF is called
+                        // too late, so we just do it preemptively.
+                        _requestAnimationFrame(drawCallback);
+                        state = EXTRA_REQUEST;
+
+                        // There's also stuff we definitely need to draw.
+                        draw();
+                        return;
+
+                    case EXTRA_REQUEST:
+                        // Turns out the extra request was not needed, so we will
+                        // stop calling rAF. No reason to call it all the time if
+                        // no one needs it.
+                        state = NO_REQUEST;
+                        return;
+                }
+            }
+
+            function draw()
+            {
+                update(elm.node.firstChild, savedScene, scheduledScene);
+                if (elm.Native.Window)
+                {
+                    elm.Native.Window.values.resizeIfNeeded();
+                }
+                savedScene = scheduledScene;
+            }
+
+            var renderer = Elm.Native.Signal.make(elm).output('main', domUpdate, signalGraph);
+
+            // must check for resize after 'renderer' is created so
+            // that changes show up.
+            if (elm.Native.Window)
+            {
+                elm.Native.Window.values.resizeIfNeeded();
+            }
+
+            return renderer;
+        }
+
     // return the object of your module's stuff!
     return {
         createNode: createNode,
         render: render,
         update: update,
-        toHtml: toHtml
+        toHtml: toHtml,
+        initGraphics : initGraphics
     };
 };
 
@@ -10039,10 +10180,11 @@ Elm.FakeVirtualDom.make = function (_elm) {
    $Result = Elm.Result.make(_elm),
    $Signal = Elm.Signal.make(_elm);
    var _op = {};
+   var initGraphics = $Native$FakeVirtualDom.initGraphics;
    var create = function (name) {    return $Native$FakeVirtualDom.createNode(name);};
    var Html = {ctor: "Html"};
    var _p0 = 5;
-   return _elm.FakeVirtualDom.values = {_op: _op,Html: Html,create: create};
+   return _elm.FakeVirtualDom.values = {_op: _op,Html: Html,create: create,initGraphics: initGraphics};
 };Elm.Main = Elm.Main || {};
 Elm.Main.make = function (_elm) {
    "use strict";
@@ -10053,12 +10195,17 @@ Elm.Main.make = function (_elm) {
    $Convert = Elm.Convert.make(_elm),
    $Debug = Elm.Debug.make(_elm),
    $FakeVirtualDom = Elm.FakeVirtualDom.make(_elm),
+   $Html = Elm.Html.make(_elm),
    $List = Elm.List.make(_elm),
    $Maybe = Elm.Maybe.make(_elm),
    $Result = Elm.Result.make(_elm),
    $Signal = Elm.Signal.make(_elm);
    var _op = {};
+   var main$ = $FakeVirtualDom.initGraphics(A2($Signal.map,
+   function (_p0) {
+      return A2($Html.div,_U.list([]),_U.list([$Html.text("hello dave")]));
+   },
+   $Signal.constant(1)));
    var aDiv = $Convert.toHtml($FakeVirtualDom.create("div"));
-   var main = aDiv;
-   return _elm.Main.values = {_op: _op,aDiv: aDiv,main: main};
+   return _elm.Main.values = {_op: _op,aDiv: aDiv,main$: main$};
 };</script></head><body><script type="text/javascript">Elm.fullscreen(Elm.Main)</script></body></html>
